tools/lsp/squirrel/grammar/jsligo/test/corpus/attributes.txt
//=========
//sum
//=========
//
//type foo = /* @boom */ | ["True"] | ["False"]
//
//----
//
//=========
//constr
//=========
//
//type foo = /* @boom */ ["True"] | ["False"]
//
//----
//
//
=========
constr with bar
=========

type foo = | /* @boom */ ["True"] | ["False"]

----

(source_file
  (type_decl
    (TypeName)
      (sum_type
        (variant
          (attr)
          (ConstrName))
        (variant
          (ConstrName)))))

=========
record
=========

type person = /* @layout:comb */ {
  name: string,
}

----

(source_file
  (type_decl
    (TypeName)
    (object_type
      (attr)
      (field_decl
        (FieldName)
        (type_annotation
          (TypeName))))))

=========
field twice
=========

type person = {
  /* @foo *//* @bar */ name: string,
}

----

(source_file
  (type_decl
    (TypeName)
    (object_type
      (field_decl
        (attr)
        (attr)
        (FieldName)
        (type_annotation (TypeName))))))

=========
let decl
=========

/* @annot */ let x : int = 1;

---

(source_file
  (let_decl
    (attr)
    (var_pattern (Name))
    (type_annotation (TypeName))
    (expr (Int))))

=========
let decl twice
=========

/* @annot1 *//* @annot2 */ let x : int = 1;

---

(source_file
  (let_decl
    (attr)
    (attr)
    (var_pattern (Name))
    (type_annotation (TypeName))
    (expr (Int))))

=========
let expr
=========

let bar = (b : int) : int => {
  /* @foo *//* @bar */
  let test = 2;
  return test;
};

---

(source_file
  (let_decl
    (var_pattern (Name))
    (expr
      (fun_expr
        (parameters
          (parameter
            (expr (Name))
            (type_annotation (TypeName))))
        (type_annotation
          (TypeName))
            (body
        (let_decl (attr) (attr)
          (var_pattern (Name))
          (expr (Int)))
        (return_statement
          (expr (Name))))))))

=========
const expr
=========

const bar = (b : int) : int => {
  /* @foo *//* @bar */
  const test = 2;
  return test;
};

---

(source_file
  (const_decl
    (var_pattern (Name))
    (expr
      (fun_expr
        (parameters
          (parameter
            (expr (Name))
            (type_annotation (TypeName))))
        (type_annotation
          (TypeName))
            (body
        (const_decl (attr) (attr)
          (var_pattern (Name))
          (expr (Int)))
        (return_statement
          (expr (Name))))))))

=========
const decl
=========

/* @annot */ const x : int = 1;

---

(source_file
  (const_decl
    (attr)
    (var_pattern (Name))
    (type_annotation (TypeName))
    (expr (Int))))

=========
const decl twice
=========

/* @annot1 *//* @annot2 */ const x : int = 1;

---

(source_file
  (const_decl
    (attr)
    (attr)
    (var_pattern (Name))
    (type_annotation (TypeName))
    (expr (Int))))
