tools/lsp/squirrel/grammar/jsligo/test/corpus/operators.txt
=========
binary operator
=========

let x = 1 + 2;

---

(source_file
  (binding
    (var_pattern
      (NameDecl))
    (binary_call (Int) (Int))))

=========
assignment operator
=========


let x = () => { x += 2; return x };

---

(source_file
  (binding
  (var_pattern (NameDecl))
  (lambda
    (block_statement
      (assignment_operator (Name) (Int))
      (return_statement (Name))))))

=========
binary operator - ||
=========

let x = true || false;

---

(source_file
  (binding
    (var_pattern
      (NameDecl))
    (binary_call (True_kwd) (False_kwd))))

=========
unary operator
=========

let x = - 1;

---

(source_file
  (binding
    (var_pattern
      (NameDecl))
    (unary_call (Int))))
