tools/lsp/squirrel/grammar/jsligo/test/corpus/pattern_matching.txt
=========
pattern-matching: list
=========

let weird_length = (v : list<int>) : int =>
  match(v, list([
    ([] : list<int>) => -1,
    ([hd, ...tl] : list<int>) => 1 + int(length(tl))
  ]));

---

(source_file
  (let_decl
    (var_pattern (NameDecl))
    (fun_expr
      (parameter
        (Name)
        (app_type (TypeName) (TypeName)))
      (TypeName)
      (body
        (match_expr
          (Name)
          (list_case
            (array_literal)
            (app_type (TypeName) (TypeName))
            (body (Int)))
          (list_case
            (array_literal
              (Name)
              (array_item_rest_expr (Name)))
              (app_type (TypeName) (TypeName))
            (body
              (binary_call
                (Int)
                (apply
                  (lambda (Name))
                  (arguments
                    (apply
                      (lambda (Name))
                      (arguments (Name)))))))))))))

=========
pattern-matching: constructors
=========

let int_of_color = (c : color) : int =>
  match(c, {
    RGB: (rgb : [int,int,int]) => 16 + rgb[2] + rgb[1] * 6 + rgb[0] * 36,
    Gray: (i : int) => 232 + i,
    Default: () => 0 });

---

(source_file
  (let_decl
    (var_pattern (NameDecl))
    (fun_expr
      (parameter
        (Name)
        (TypeName))
      (TypeName)
      (body
        (match_expr
          (Name)
          (ctor_case
            (ConstrName)
            (ctor_param
              (Name)
              (tuple_type (TypeName) (TypeName) (TypeName)))
            (body
              (binary_call
                (binary_call
                  (binary_call
                    (Int)
                    (data_projection (Name) (Int)))
                  (binary_call
                    (data_projection (Name) (Int))
                    (Int)))
                (binary_call
                  (data_projection (Name) (Int))
                  (Int)))))
          (ctor_case
            (ConstrName)
            (ctor_param
              (Name)
              (TypeName))
            (body
              (binary_call (Int) (Name))))
          (ctor_case
            (ConstrName)
              (body (Int))))))))
