tools/lsp/squirrel/grammar/jsligo/test/corpus/preprocessor.txt
=========
preprocessor directives
=========

#if DEBUG
#elif VERBOSE
#else
#endif

#include "file"

#import "file" "Module"

#define FOO
#define BAR

#undef FOO

#if BAR
#  error Unsupported
#endif

---

(source_file
  (preprocessor (p_if))
  (preprocessor (p_if))
  (preprocessor (p_if))
  (preprocessor 
    (p_include (String)))
  (preprocessor
    (p_import (String) (String)))
  (preprocessor (p_define))
  (preprocessor (p_define))
  (preprocessor (p_define))
  (preprocessor (p_if))
  (preprocessor (p_error))
  (preprocessor (p_if)))
